[build-system]
requires = ["setuptools>=43.0.0", "wheel", "Cython>=0.29.12,!=3.1.2"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true

[tool.mypy]
files = ["cantera"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "graphviz.*"
follow_untyped_imports = true
