[build-system]
requires = ["setuptools>=43.0.0", "wheel", "Cython>=3.0.8,!=3.1.2"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true

[tool.mypy]
files = ["cantera"]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = false
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["unused-ignore"]
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
enable_incomplete_feature = "TypeForm"

[[tool.mypy.overrides]]
module = "graphviz.*"
follow_untyped_imports = true
