[build-system]
requires = ["setuptools>=43.0.0", "wheel", "Cython>=3.0.8,!=3.1.2"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true

[tool.mypy]
files = ["cantera"]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = false
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
enable_incomplete_feature = "TypeForm"

[[tool.mypy.overrides]]
module = "graphviz.*"
follow_untyped_imports = true

# Cython pure-Python-syntax modules (see ``pure_py_modules`` in
# ``interfaces/cython/SConscript``). Their ``.py`` source is real Cython, not real
# Python: it references C++-level names injected by the companion ``.pxd``
# (``Cxx*``, ``shared_ptr``, ...) and ``cdef`` helpers that have no Python-visible
# existence, so mypy cannot interpret them as Python. mypy also cannot verify that the
# annotations are *correct* for these modules (the C boundary is invisible to it); that
# is the job of the Cython compiler (which enforces the C-level type contracts) and the
# runtime test suite. They are therefore treated as opaque here, exactly as the ``.pyx``
# modules are. The *published* type surface that the shipped ``.py`` exports is still
# exercised by the rest of the suite: ``stubtest`` checks that it matches the runtime
# extension, and ``pyright --verifytypes`` checks it for completeness. Keep this list in
# sync with ``pure_py_modules``. ``cantera._cantera`` (the aggregator, also shipped as a
# Cython-compiled ``.py``) is included for the same reason: adding the annotations mypy
# wants would make Cython 3 emit runtime type coercion, so its ``.py`` is treated as
# opaque too.
[[tool.mypy.overrides]]
module = ["cantera.jacobians", "cantera.func1", "cantera.constants",
          "cantera.yamlwriter", "cantera.reactionpath", "cantera.speciesthermo",
          "cantera._cantera"]
ignore_errors = true
