[build-system]
# These versions are updated to the latest versions supported in cibuildwheel
# at the time of this commit. Feel free to update as required.
requires = [
  "setuptools>=67.6.1",
  "wheel",
  "numpy>=2.0; python_version > '3.8'",
  "oldest_supported_numpy; python_version == '3.8'",
  "Cython>=3.0.10",
]
build-backend = "setuptools.build_meta"
