[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sourcegen"
version = "3.3.0a1"
license-files = ["../../License.txt"]
description = "Source generator for creating Cantera interface code"
authors = [{name = "Cantera Developers"}]
requires-python = ">=3.10"
dependencies = ["jinja2"]

[project.scripts]
sourcegen = "sourcegen.api:main"
